# django-as-a-package-layout-template

./: README.md  manage.py-tpl  pyproject.toml
docs/: CONTRIBUTING.md
src/project_name/: __init__.py-tpl  asgi.py-tpl  wsgi.py-tpl
src/project_name/conf/: settings.py-tpl  urls.py-tpl
